fix the align items on toast

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,6 @@
 .p-toast-message-text {
   padding: 1rem;
 }
+.p-toast-message-content{
+    align-items: center;
+}
